Add changes to report.tex

--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -1,17 +1,35 @@
-\documentclass[a4paper,12pt]{report}
+\documentclass[a4paper,12pt]{article}
 \usepackage[portuguese]{babel}
 \RequirePackage[T1]{fontenc}
 \RequirePackage[utf8]{inputenc}
 
 \renewcommand{\baselinestretch}{2}
-\author{Martinho Aragão numero, Jéssica numero, João numero}
+%\author{Martinho Aragão numero, Jéssica, João numero}
 \title{Geocaching POO}
 
 \begin{document}
 \maketitle
+\\
+\\Realizado por:
+\\Martinho Aragão a72205 
+\\Jéssica Pereira a71164	
+\\Adelino Costa a70563
+\\
+
+
 \tableofcontents
 
-\chapter{Introduction}
+\section{Introdução}
+O presente trabalho é sobre o conceito de Geocaching conhecido nas redes sociais: pretendemos simular e registar atividades e descobrimentos de caches. Para isso é necessário a modularização 
+
+Os objetivos são
+
+Está organizado 
+
+Metodologia utilizada
+
+\section{Conclusão}
+
 
 \section{}
 \subsection{}
