Add work in report

--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -1,26 +1,35 @@
 \documentclass[a4paper,12pt]{article}
 \usepackage[portuguese]{babel}
+\usepackage{graphicx}
+%\graphicspath{ {/home/jessica/Documentos/Engineer/Geocaching-Java} }
 \RequirePackage[T1]{fontenc}
 \RequirePackage[utf8]{inputenc}
 
 \renewcommand{\baselinestretch}{2}
-%\author{Martinho Aragão numero, Jéssica, João numero}
+%\author{no realizado por :P}
 \title{Geocaching POO}
-
+\date{Junho 2015}
 \begin{document}
 \maketitle
-\\
-\\Realizado por:
-\\Martinho Aragão a72205 
-\\Jéssica Pereira a71164	
-\\Adelino Costa a70563
-\\
+\begin{center}
+Realizado por: \\
+Jéssica Pereira a71164	\\
+\includegraphics[height=3\baselineskip,natwidth=369,natheight=430]{jessica0.jpg}\\
+Adelino Costa a70563\\
+\includegraphics[height=3\baselineskip,natwidth=369,natheight=430]{adelino.jpg}\\
+Martinho Aragão a72205 \\
+\includegraphics[height=3\baselineskip,natwidth=369,natheight=430]{martinho.jpg}
+\end{center}
+
+\pagebreak
 
 
 \tableofcontents
 
+\pagebreak
+
 \section{Introdução}
-O presente trabalho é sobre o conceito de Geocaching conhecido nas redes sociais: pretendemos simular e registar atividades e descobrimentos de caches. Para isso é necessário a modularização 
+Este trabalho é sobre o conceito de Geocaching conhecido nas redes sociais: pretendemos simular e registar atividades e descobrimentos de caches. Para isso é necessário a modularizar  
 
 Os objetivos são
 
