Add Introduction all in portuguese this time

--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -29,8 +29,16 @@ Martinho Aragão a72205 \\
 \pagebreak
 
 \section{Introdução}
-Este trabalho é sobre o conceito de Geocaching conhecido nas redes sociais: pretendemos simular e registar atividades e descobrimentos de caches. Para isso é necessário a modularizar  
 
+\quad
+Este trabalho é sobre o conceito de Geocaching conhecido nas redes sociais: pretendemos simular e registar atividades e descobrimentos de caches. Para isso é necessário modularizar e fazer as devidas abstrações na preparação para o trabalho, pois quanto mais abstrações forem criadas mais independentes os módulos serão, podendo depois usar a composição entre estas classes e fornecendo uma melhor compreensão do código e tratamento da informação.
+\par
+É necessário o estudo e concepção das classes necessárias, estruturas de dados, métodos respetivos, variáveis de instância e de classe necessárias, imaginar a dependência entre as classes (composição) e definir uma hierarquia (nomeadamente criando uma super classe para as Caches).
+\par
+Para além de criar classes abstratas, também é necessário guardar todos os dados relativos às Caches e aos Utilizadores para poder criar métodos eficientes relativos ao tratamento destes.
+De entre os requisitos básicos também serão implementados os Eventos, com a simulação da meteorologia e cálculo de distâncias entre caches dado duas coordenadas (coordenadas iniciais e as coordenadas da cache). Estes dois últimos pontos serão implementados também em toda a descoberta de Caches/Atividades e não somente no decorrer de Eventos. Serão uteis nomeadamente para o cálculo de pontuações.
+
+\pagebreak
 Os objetivos são
 
 Está organizado 
