add Diagram photo and report.tex update

--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -58,6 +58,7 @@ em toda a descoberta de Caches/Actividades e não somente no decorrer de Eventos
 \section{Modularização - Classes criadas}
 
 %adicionar imagem do trello final do diagrama
+\includegraphics[height=3\baselineskip,natwidth=369,natheight=430]{Diagrama.jpg}
 
 \pagebreak
 \section{Bases de dados}
