add text to Register and Login area

--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -135,14 +135,6 @@ private TreeMap<String, Double> adminMails;
 
 
 
-\pagebreak
-\section{Register e Login}
-TODO
-Falar no user e o que ele pode fazer : atividades, registos de estatisticas, amigos...
-registo dos seus amigos falar onde diz TODO AMIGOS
-
-
-
 
 
 
@@ -159,6 +151,26 @@ Mencionar que Cache é superclasse e os tipos de cache são sub-classes Estrutur
 \subsection{ Micro Cache }
 \subsection{ Multi Cache}
 \subsection{ Cache Mistério }
+
+
+
+\pagebreak
+\section{Register e Login}
+TODO
+Falar no user e o que ele pode fazer : atividades, registos de estatisticas, amigos...
+registo dos seus amigos falar onde diz TODO AMIGOS
+
+Ao iniciar o programa, o user efetua o seu registo com e-mail, pass, nome, morada etc... Quando faz login é-lhe apresentado a sua pontuação a 0 ao lado do seu nome, e um menu inicial.
+Neste menu, o user pode ver as caches que estão a uma dada distância da sua localização (fornecendo coordenadas ao programa/ aplicação), identificadas pelo seu id. Pode criar caches dos 4 tipos existentes, adicionar uma atividade, fazer pedidos de amizade, entre outros requisitos básicos explicitos no enunciado.
+
+Este login usa uma encriptação da pass tornando a informação do user segura e tornando este programa mais realísta.
+
+
+
+
+
+
+
 
 \pagebreak
 \section{Atividades e Estatísticas}
@@ -231,6 +243,7 @@ Tentamos criar um array para ter em cada indice o mês ligado ao conjunto de ati
 TODO AMIGOS
 \section{Amigos}
 Pedidos de amizade, ver atividades dele, etc ....
+
 
 
 
