test Login Friend Requests all good, added to report

--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -150,6 +150,9 @@ Mencionar que Cache é superclasse e os tipos de cache são sub-classes Estrutur
 
 Ao fazer report de uma cache o admin tem acesso a essas caches e pode remover essa cache aceitando o report ou eliminar esse report. Se o utilizador remover a cache (invalidando-a) depois de ter feito report a essa cache, quando voltamos para o contexto do admin, essa cache já nao existe nos reports porque foi eliminada.
 
+Para fazer login como admin existe uma conta: grupoajm@gmail.com   cuja pass é AdminAdmin.
+
+
 \subsection{ Cache Tradicional}
 \subsection{ Micro Cache }
 \subsection{ Multi Cache}
@@ -246,6 +249,9 @@ Tentamos criar um array para ter em cada indice o mês ligado ao conjunto de ati
 TODO AMIGOS
 \section{Amigos}
 Pedidos de amizade, ver atividades dele, etc ....
+
+Dá para ver a lista de pedidos, aceitar, e em ambos os lados no users depois aparece o mail da pessoa na lista dos amigos.
+
 
 
 
