--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -59,7 +59,7 @@ em toda a descoberta de Caches/Actividades e não somente no decorrer de Eventos
 
 \section{Modularização - Classes criadas}
 
-\quad Decidimos apenas criar 4 tipos de Caches visto a Cache-Evento nao fazer sentido quando temos uma classe que simula eventos, e a Cache Virtual ... 
+\quad Decidimos apenas criar 4 tipos de Caches visto a Cache-Evento nao fazer sentido quando temos uma classe que simula eventos, e a Cache Virtual ...
 \par Guardamos todos os users e todas as caches criadas numa base de dados.
 \par Para classes que usam estruturas do tipo set criamos vários comparadores úteis para diferentes tipos de ordenação a diferentes classes.
 \par Inicialmente tinhamos uma classe chamada 'Server' que acabamos por eliminar pois esta baseia-se na classe GeocachingPOO. A ideia era na classe Server ter acesso a toda a informação, sendo esta apenas acessível aos Admins, mas no próprio GeocachingPOO temos a opção de fazer login como Admin, simplificando e colocando tudo numa classe.
@@ -73,12 +73,12 @@ em toda a descoberta de Caches/Actividades e não somente no decorrer de Eventos
 \section{Bases de dados}
 
 \subsection{CacheBase}
-\par Antes de implementarmos a classe \textbf{CacheBase} reflectimos que características únicas teria cada cache para a 
+\par Antes de implementarmos a classe \textbf{CacheBase} reflectimos que características únicas teria cada cache para a
 diferenciar de todas as outras.
-\par Cada cache tem coordenadas únicas, não sendo possível criar uma cache em coordenadas onde já existe uma cache, 
-independentemente do tipo de cache, isto levou-nos a implementar um \textbf{TreeMap} para mapear coordenadas a 
+\par Cada cache tem coordenadas únicas, não sendo possível criar uma cache em coordenadas onde já existe uma cache,
+independentemente do tipo de cache, isto levou-nos a implementar um \textbf{TreeMap} para mapear coordenadas a
 IDs de cache.
-\par Para guardar as caches utilizamos um \textbf{ArrayList} visto que sabendo o ID de uma cache é bastante fácil encontrá-lo 
+\par Para guardar as caches utilizamos um \textbf{ArrayList} visto que sabendo o ID de uma cache é bastante fácil encontrá-lo
 nesta estrutura pois para um dado valor de ID sabemos que a Cache, caso exista, estará no indíce de valor igual a (ID - 1).
 \par Portanto a implementação das variáveis de instância de \textbf{CacheBase} é a seguinte:
 \begin{lstlisting}[language=Java]
@@ -88,14 +88,14 @@ private ArrayList<Cache> caches;
 private TreeMap<Coordinates, Double> coords;
 \end{lstlisting}
 
-\par Como é necessário um dado Utilizador poder ver as caches que criou utilizamos um \textbf{TreeMap} para mapear 
+\par Como é necessário um dado Utilizador poder ver as caches que criou utilizamos um \textbf{TreeMap} para mapear
 IDs de Utilizadores a um \textbf{ArrayList} que contém os IDs das caches que o Utilizador criou, caso tenha criado alguma.
 \begin{lstlisting}[language=Java]
 /* Mapeamento IDs de Utilizadores e IDs de Caches */
 private TreeMap<Double, ArrayList<Double>> owners;
 \end{lstlisting}
 
-\par Finalmente para implementar o 'report' de Caches criámos outra variável de instância que mapea-se IDs de Caches 
+\par Finalmente para implementar o 'report' de Caches criámos outra variável de instância que mapea-se IDs de Caches
 a \textbf{ArrayList} de Reports dessa Cache.
 \begin{lstlisting}[language=Java]
 /* Mapeamento entre IDs de Caches e Reports dessa cache */
@@ -104,9 +104,9 @@ private TreeMap<Double, ArrayList<Report>> reported_caches;
 
 \newpage
 \subsection{UserBase}
-\par Para guardar tanto Utilizadores como Administratores primeiros pensamos nas várias maneiras de referenciar um 
+\par Para guardar tanto Utilizadores como Administratores primeiros pensamos nas várias maneiras de referenciar um
 Utilizador, assumimos que as maneiras de referenciar um Utilizador seria através do seu ID ou através do seu e-mail.
-\par Para os Utilizadores criámos utilizamos um \textbf{TreeMap} que faz o mapeamento de um e-mail para um ID, e 
+\par Para os Utilizadores criámos utilizamos um \textbf{TreeMap} que faz o mapeamento de um e-mail para um ID, e
 utilizamos um \textbf{ArrayList} para guardar os Utilizadores pois torna-se bastante rápido encontrar um utilizador dado o
 seu ID, visto que para um dado ID o Utilizador, caso exista, estará no indice de valor igual a (ID - 1) no \textbf{ArrayList}.
 \par Ficaram então definidas desta forma as variáveis de instância de \textbf{UserBase}:
@@ -140,51 +140,51 @@ private TreeMap<String, Double> adminMails;
 
 \pagebreak
 
-TODO
 \section{ Caches }
-Como criamos uma Cache?
-Como tratamos da Invalidação de uma Cache?
-Como permitirmos ao user para reportar uma cache e quando é que ela é efetivamente reportada? pelo admin... 
+As caches são a principal componente de qualquer plataforma de GeoCaching, de facto têm vindo a adquirir vários tipos dependendo das suas características.
+De forma a estruturar as caches assumimos que existem factores comuns a todos os tipos, nomeadamente coordenadas, tesouro, um identificador, um e-mail do criador e um registro de atividades passadas.
 
-Mencionar que Cache é superclasse e os tipos de cache são sub-classes Estrutura de cada uma;
+Devido a isto definimos uma classe \textbf{Cache} abstracta que é herdada pelos vários tipos de cache que serão sucintamente descritos de seguida.
 
-Ao fazer report de uma cache o admin tem acesso a essas caches e pode remover essa cache aceitando o report ou eliminar esse report. Se o utilizador remover a cache (invalidando-a) depois de ter feito report a essa cache, quando voltamos para o contexto do admin, essa cache já nao existe nos reports porque foi eliminada.
+Uma outra necessidade essencial é a de reportar e apagar uma Cache, desta forma os utilizadores têm a possibilidade de enviar uma queixa sobre uma cache, cujos adminstradores têm depois acesso bem como o criador da cache.
+Depois, tanto criadores como adminstradores podem tomar a decisão de invalidar a mesma.
 
-Para fazer login como admin existe uma conta: grupoajm@gmail.com   cuja pass é AdminAdmin.
+\begin{itemize}
+  \item \textbf{Cache Tradicional} - Uma cache básica, sem variáveis adicionais;
+  \item \textbf{Micro Cache} - Uma cache básica, sem tesouro;
+  \item \textbf{Multi Cache} - Uma lista de coordenadas que devem ser percorridas até encontrar a cache final com tesouro
+  \item \textbf{Cache Mistério} - Um desafio para encontrar as coordenadas
+\end{itemize}
 
-
-\subsection{ Cache Tradicional}
-\subsection{ Micro Cache }
-\subsection{ Multi Cache}
-\subsection{ Cache Mistério }
-
-
+Foi também tomada uma decisão relativamente a duas das Caches apresentadas no enunciado.
+A \textbf{Cache Virtual} que foi descontinuida pela plataforma oficial, e a \textbf{Cache Evento} que acaba por ser um evento em si.
+Por essa razão nenhuma das duas foi contemplada pela nossa estrutura.
 
 \pagebreak
 \section{Registo e Login}
-\par Uma das funções mais básicas da aplicação baseia-se no registo e login de Utilizadores. No Menu inicial o utilizador tem 
+\par Uma das funções mais básicas da aplicação baseia-se no registo e login de Utilizadores. No Menu inicial o utilizador tem
 a opção de se registar ou então fazer login caso já possua uma conta.
-\par Caso o utilizador deseje registar uma conta na aplicação terá de fornecer o seu e-mail, nome, password, 
-data de nascimento, a cidade e país de residência e o seu género (Masculino ou Feminino). A class \textbf{Main} invocará 
-os métodos necessários da classe \textbf{GeocachingPOO} que por sua vez invocará métodos da classe 
+\par Caso o utilizador deseje registar uma conta na aplicação terá de fornecer o seu e-mail, nome, password,
+data de nascimento, a cidade e país de residência e o seu género (Masculino ou Feminino). A class \textbf{Main} invocará
+os métodos necessários da classe \textbf{GeocachingPOO} que por sua vez invocará métodos da classe
 \textbf{UserBase} para registar o utilizador.
-\par Caso o utilizador especifique um e-mail já em uso será negado o registo da conta. Caso se verifique que o utilizador se 
-possa registar uma mensagem de sucesso aparecerá no ecrã, caso contrário uma mensagem de erro, informando o utilizador 
+\par Caso o utilizador especifique um e-mail já em uso será negado o registo da conta. Caso se verifique que o utilizador se
+possa registar uma mensagem de sucesso aparecerá no ecrã, caso contrário uma mensagem de erro, informando o utilizador
 o porquê da falha do registo.
-\par Aproveitamos para implementar um método que encripta a password do utilizador para que deste modo, se um utilizador 
-executar o método da classe \textbf{User} que permite obter a password apenas verá o resultado da encriptação. 
+\par Aproveitamos para implementar um método que encripta a password do utilizador para que deste modo, se um utilizador
+executar o método da classe \textbf{User} que permite obter a password apenas verá o resultado da encriptação.
 Sempre que é necessário confirmar se a password fornecida coincide com a guardada no utilizador o programar encripta a password fornecida e verifica se é igual ao resultado da encriptação já armazenado.
 \\
-\par Depois de um utilizador criar uma conta pode então executar o login, a classe \textbf{Main}, como trata de I/O, recebe qual 
-o e-mail e a password do utilizador, a classe \textbf{GeocachingPOO} trata do resto das invocações dos métodos necessários 
+\par Depois de um utilizador criar uma conta pode então executar o login, a classe \textbf{Main}, como trata de I/O, recebe qual
+o e-mail e a password do utilizador, a classe \textbf{GeocachingPOO} trata do resto das invocações dos métodos necessários
 para executar o login.
-\par Caso o e-mail esteja associado a uma conta existente e a password fornecida confira com a password guardada então 
-será apresentado um menu ao utilizador, onde no topo lhe é apresentado o seu nome e o total de pontos que consegui juntar 
+\par Caso o e-mail esteja associado a uma conta existente e a password fornecida confira com a password guardada então
+será apresentado um menu ao utilizador, onde no topo lhe é apresentado o seu nome e o total de pontos que consegui juntar
 até ao momento.
-\par A partir deste menu de utilizador o utilizador consegue executar todas as funções básicas propostas, como, por exemplo, 
-mudar informações pessoais (nome, e-mail, género, password,..), criar uma cache de enter os 4 tipos que a aplicação 
+\par A partir deste menu de utilizador o utilizador consegue executar todas as funções básicas propostas, como, por exemplo,
+mudar informações pessoais (nome, e-mail, género, password,..), criar uma cache de enter os 4 tipos que a aplicação
 conhece, registar uma activadade, consultar as suas actividades, enviar pedidos de amizade, etc.
-\par Decidimos também implementar uma opção no menu relativo a caches que permita a um utilizador descobrir quais as 
+\par Decidimos também implementar uma opção no menu relativo a caches que permita a um utilizador descobrir quais as
 caches que se encontram a uma determinada distância (raio) de uma certa localização, indicada pelo utilizador.
 
 \pagebreak
@@ -203,7 +203,7 @@ Este incremento de latitude e longitude são métodos que usam o Math.Random, pr
 
 
 \subsubsection{Meteorologia}
-\quad  Na classe Meteo são geradas as meteorologias de uma forma aleatória também. Existem dois campos que dizem respeito à Temperatura e ao Estado de Tempo. 
+\quad  Na classe Meteo são geradas as meteorologias de uma forma aleatória também. Existem dois campos que dizem respeito à Temperatura e ao Estado de Tempo.
 \par int Low = -10;
 \par int High = 40;
 \par São definidos os valores mínimos e máximos para a Temperatura. Para a Weather existem 7 tipos possíveis que são os seguintes:
@@ -217,7 +217,7 @@ Este incremento de latitude e longitude são métodos que usam o Math.Random, pr
 \par A cada estado de tempo está associado um número que vai ser gerado aleatóriamente com o Math.Random entre os valores de inteiros de 0 até 7 (exclusive).
 \\
 
-\par Tudo isto é muito importante para as Estatísticas pois são calculados os pontos em cada Atividade, conforme o estado de tempo, os kilometros percorridos e o tipo de cache encontrada. 
+\par Tudo isto é muito importante para as Estatísticas pois são calculados os pontos em cada Atividade, conforme o estado de tempo, os kilometros percorridos e o tipo de cache encontrada.
 \par Para cada atividade existe um limite de pontos que decidimos atribuir: 100 pontos. Assim se quisermos diminuir ou aumentar este limite é só tratar da escala deste limite que será mais fácil. (Por exemplo, para cada atividade apenas querer 10 pontos, ou querer 1000, etc. ...).
 \par Este limite de pontos total rege-se também por um limite às 3 atribuiçoes de pontos que criamos,  kilometros, meteorologia e cache, que são apresentados de seguida:
 \begin{lstlisting}
@@ -239,8 +239,8 @@ TODO CODIGO A SER FEITO
 A razão pela qual temos duas classes é porque decidimos guardar também as Estatísticas Globais do user, ou seja, as estatísticas de todos os anos. Para melhor entender o funcionamento e a estrutura destas classes, começaremos por explicar a Statistic.
 
 \par Na Statistic temos as estatísticas de um dado ano. A estrutura é a seguinte:
-\begin{lstlisting} 
-ArrayList < TreeSet<Activity>>. 
+\begin{lstlisting}
+ArrayList < TreeSet<Activity>>.
 \end{lstlisting}
 
 Tentamos criar um array para ter em cada indice o mês ligado ao conjunto de atividades desse mês mas é impossivel criar array com valores que não sejam primitivos, logo tivemos de mudar a estrutura para um ArrayList. Este ArrayList terá como indices o mês da estatistica. O seu conteúdo será o conjunto de Atividades realizadas nesse mês. Para adicionar uma atividade garantimos que não é possivel adicionar uma atividade se o ano não for o mesmo. Por isso é importante buscar o ano desta estatística, fazer set do ano desta estatística... O ano assumido como default é o current year que é 2015. Também são disponibilizadas funções como o de contar quantos tipos de cache num dado mês existem, e devolver num array, soma de pontos, de kms totais, numero de todas as caches encontradas, tanto para este ano como para um dado mês. Estas função são usadas como auxiliares na classe StatisticYear, e o porquê será entendido em seguida, quando for explicada a estrutuda da mesma.
@@ -256,7 +256,7 @@ Tentamos criar um array para ter em cada indice o mês ligado ao conjunto de ati
 
 \pagebreak
 \section{Amigos}
-\par Implementamos também uma rede de amigos, cada instância de \textbf{NormalUser} contém variáveis para guardar 
+\par Implementamos também uma rede de amigos, cada instância de \textbf{NormalUser} contém variáveis para guardar
 os IDs dos utilizadores que são seus amigos e os IDs dos utilizadores que enviaram pedidos de amizade.
 Essas variáveis ficaram então definidas da seguinte forma:
 \begin{lstlisting}[language=Java]
@@ -265,9 +265,9 @@ ArrayList<Double> friends;
 /* IDs dos utlizadores que enviaram pedidos de amizade */
 ArrayList<Double> friend_requests;
 \end{lstlisting}
-\par A aplicação permite que utilizadores enviem pedidos de amizade a outros utilizadores inserindo o e-mail a quem desejam 
-enviar o pedido de amizade. O utilizador que recebe o pedido de amizade pode aceitar o pedido de amizade e ambos os 
-utilizadores guardam o ID um do outros na sua lista de amigos. A lista de amigos pode depois ser visualizada dentro da 
+\par A aplicação permite que utilizadores enviem pedidos de amizade a outros utilizadores inserindo o e-mail a quem desejam
+enviar o pedido de amizade. O utilizador que recebe o pedido de amizade pode aceitar o pedido de amizade e ambos os
+utilizadores guardam o ID um do outros na sua lista de amigos. A lista de amigos pode depois ser visualizada dentro da
 própria aplicação.
 \par Ao adicionar um amigo um utilizador poderá então, se desejar, visualizar a lista das 10 actividades mais recentes de qualquer um dos seus amigos.
 
@@ -286,37 +286,37 @@ TODO
 
 \pagebreak
 \section{Classes Main e GeocahingPOO}
-\par Para poder utilizar as classes desenvolvidas para o projecto criamos uma class à parte, a classe \textbf{Main}, que contém 
-o método \em main. O único propósito desta classe é então lidar com a parte de I/O, relativamente apresentação de menus 
-e tratamento de input por parte do utilizador, esta classe também é responsável por invocar os diferentes métodos existentes 
+\par Para poder utilizar as classes desenvolvidas para o projecto criamos uma class à parte, a classe \textbf{Main}, que contém
+o método \em main. O único propósito desta classe é então lidar com a parte de I/O, relativamente apresentação de menus
+e tratamento de input por parte do utilizador, esta classe também é responsável por invocar os diferentes métodos existentes
 na classe \textbf{Geocaching} quando o utilizador necessitar de se registar, criar uma actividade, etc.
 Também é neste método \em main que se lida com as Excepções criadas.
-\par A classe \textbf{GeocachingPOO} contém variáveis das classes \textbf{CacheBase} e \textbf{UserBase} para poder guardar 
-os utilizadores e as caches criadas. Contêm também variáveis para guardar o utilizador ou administrador atualmente 'loggado' 
+\par A classe \textbf{GeocachingPOO} contém variáveis das classes \textbf{CacheBase} e \textbf{UserBase} para poder guardar
+os utilizadores e as caches criadas. Contêm também variáveis para guardar o utilizador ou administrador atualmente 'loggado'
 e variáveis para controlo de IDs actuais a utilizar.
-\par A classe contêm métodos para executar os vários requisitos do projecto, por exemplo, registar um utilizador novo, a classe 
-faz isto invocando métodos existentes em \textbf{UserBase}, já no caso de criação de caches, por exemplo, a classe invoca 
-métodos definidos em \textbf{CacheBase}. Basicamente a classe \textbf{GeocahingPOO} agrupa os vários métodos que sejam 
-precisos para utilizar a aplicação, definindo também quais os métodos necessários invocar para os diferentes objectos e ações 
+\par A classe contêm métodos para executar os vários requisitos do projecto, por exemplo, registar um utilizador novo, a classe
+faz isto invocando métodos existentes em \textbf{UserBase}, já no caso de criação de caches, por exemplo, a classe invoca
+métodos definidos em \textbf{CacheBase}. Basicamente a classe \textbf{GeocahingPOO} agrupa os vários métodos que sejam
+precisos para utilizar a aplicação, definindo também quais os métodos necessários invocar para os diferentes objectos e ações
 executadas.
-\par Separar a parte de I/O da classe \textbf{GeocachingPOO} permite que a classe seja reutilizada noutros ambientes, por 
+\par Separar a parte de I/O da classe \textbf{GeocachingPOO} permite que a classe seja reutilizada noutros ambientes, por
 exemplo com uma Interface Gráfica.
 
 \pagebreak
 \section{Salvaguarda do Estado}
-\par Para guardar o estado da aplicação utilizamos classes já definidas em Java, nomeadamente a class 
-\textbf{ObjectOutputStream}. Utilizando esta classe é possível criar um ficheiro objecto com as informações de todos os 
-objectos da aplicação no estado actual. Para isso incluimos uma opção no menu principal que guardar o estado actual 
+\par Para guardar o estado da aplicação utilizamos classes já definidas em Java, nomeadamente a class
+\textbf{ObjectOutputStream}. Utilizando esta classe é possível criar um ficheiro objecto com as informações de todos os
+objectos da aplicação no estado actual. Para isso incluimos uma opção no menu principal que guardar o estado actual
 da aplicação num ficheiro com o nome 'geocaching'.
-\par Para carregar um estado anterior da aplicação utilizamos a class \textbf{ObjectInputStream} que permite ler objectos de 
-um ficherio objecto. Adicionamos uma opção no menu principal para carregar um estado anterior da aplicação, a aplicação 
-tenta automaticamente ler o ficheiro 'geocahing' criado quando se guardar o estado da aplicação, caso o ficheiro não esteja 
+\par Para carregar um estado anterior da aplicação utilizamos a class \textbf{ObjectInputStream} que permite ler objectos de
+um ficherio objecto. Adicionamos uma opção no menu principal para carregar um estado anterior da aplicação, a aplicação
+tenta automaticamente ler o ficheiro 'geocahing' criado quando se guardar o estado da aplicação, caso o ficheiro não esteja
 na mesma diretoria onde se executa a aplicação o estado anterior não será carregado.
 
 \pagebreak
 \section{Tratamento de Excepções}
-\quad Decidimos colocar todas as excepções num package chamado Exceptions para uma melhor visualização das classes e 
-clareza no diagrama. Para todas as classes que implementam Excepções é feito import deste Package. Apenas a função 
+\quad Decidimos colocar todas as excepções num package chamado Exceptions para uma melhor visualização das classes e
+clareza no diagrama. Para todas as classes que implementam Excepções é feito import deste Package. Apenas a função
 \em main faz o tratamento de Excepções.
 \pagebreak
 \section{Conclusão}
